# gem

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest_out.txt  pytest_out2.txt  sample.json  search.html  searchindex.js  src.data.html  src.features.html  src.models.html  src.serving.html
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt  src.data.rst.txt  src.models.rst.txt  src.serving.rst.txt
docs/source/: conf.py  index.rst  src.features.rst
notebooks/: 01_eda.ipynb  02_features.ipynb  03_models.ipynb  04_mlflow.ipynb
reports/: 01_eda.html  02_features.html  03_models.html  04_mlflow.html
src/features/: build_features.py  feature_selection.py
src/serving/: app.py
tests/: test_api.py
