[project]
name = "cap"
version = "0.1.0"
description = "Cap: End-to-End Telco Churn Prediction Pipeline"
authors = [
    {name = "Pablo FG",email = "pablo.ferrergonzalez.cd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "mlflow (>=3.2.0,<4.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "ruff (>=0.12.9,<0.13.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
